--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adopcion</title>
+    <title>Adopcion de mascotas</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
-        <h1>Adopta un perrito</h1>
+        <h1>Adopta una mascota</h1>
         <nav>
             <ul>
                 <li><a href="#Inicio">Inicio</a></li>
