--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </div>
      </section>
      <footer id="Contacto">
-        <p>Adopta un perrito. todos los derechos reservados</p>
-        <p>Contacto: aoptaperrito.581@gmail.com</p>
+        <p>Adopta una mascota. todos los derechos reservados</p>
+        <p>Contacto: adopta una mascota.581@gmail.com</p>
      </footer>
      
 
